--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title Slim Jim
-  
   body
-    h1 Sup ya'll
+    h1 Sup #{@user.username}
+
+    - sum = (1..3).reduce(:+)
+    h2 = sum
